--- a/tinyproxy/Dockerfile
+++ b/tinyproxy/Dockerfile
@@ -5,4 +5,6 @@ RUN apt-get update -q \
     tinyproxy \
  && rm -rf /var/lib/apt/lists/*
 
+RUN echo "Allow 0.0.0.0/0" >> /etc/tinyproxy/tinyproxy.conf
+
 ENTRYPOINT ["/usr/bin/tinyproxy", "-d"]
