--- a/tinyproxy/Makefile
+++ b/tinyproxy/Makefile
@@ -1,12 +1,11 @@
-IMAGE_NAME ?= rsysio/masscan
+IMAGE_NAME ?= rsysio/tinyproxy
 IMAGE_TAG ?= latest
-TEST_CIDR ?= 10.0.0.0/8
 
 build:
 	docker build -t $(IMAGE_NAME) .
 
 test:
-	docker run -it --rm $(IMAGE_NAME) $(TEST_CIDR) -p 80
+	docker run -it --rm -p 8888:8888 $(IMAGE_NAME)
 
 shell:
 	docker run -it --rm --entrypoint /bin/bash $(IMAGE_NAME)
